--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,12 @@
     <java.version>1.8</java.version>
     <kamon.version>0.6.7</kamon.version>
     <log4j.version>2.6.2</log4j.version>
-    <spring.boot.version>1.5.13.RELEASE</spring.boot.version>
-    <spring.boot2.version>2.0.2.RELEASE</spring.boot2.version>
-    <spring.cloud.version>Camden.SR6</spring.cloud.version>
+    <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
+    <spring.boot2.version>${spring.boot.version}</spring.boot2.version>
+    <spring.cloud.version>Finchley.RC1</spring.cloud.version>
+    <postgresql.version>42.2.2</postgresql.version>
     <java.chassis.version>1.0.0-m1</java.chassis.version>
-    <spring.version>4.3.7.RELEASE</spring.version>
+    <spring.version>5.0.6.RELEASE</spring.version>
     <akka.version>2.5.6</akka.version>
     <rat.version>0.12</rat.version>
     <maven.failsafe.version>2.19.1</maven.failsafe.version>
@@ -417,7 +418,6 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
-        <version>${spring.version}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
