--- a/pom.xml
+++ b/pom.xml
@@ -416,10 +416,17 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring.boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!--<dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
         <scope>test</scope>
-      </dependency>
+      </dependency>-->
     </dependencies>
   </dependencyManagement>
 
