--- a/alpha/alpha-server/pom.xml
+++ b/alpha/alpha-server/pom.xml
@@ -168,6 +168,54 @@
           <plugin>
             <groupId>io.fabric8</groupId>
             <artifactId>docker-maven-plugin</artifactId>
+              <configuration>
+                  <dockerHost>tcp://192.168.200.125:2375</dockerHost>
+                <images>
+                  <image>
+                    <name>saga/${project.artifactId}</name> <!--生成的image名-->
+                    <alias>${project.artifactId}</alias>
+                    <build>
+                      <from>java:8u111-jre</from>
+                      <tags>
+                        <tag>latest</tag>
+                        <!--<tag>${project.version}</tag>-->
+                      </tags>
+                      <ports>
+                        <port>8899</port>
+                        <port>8989</port>
+                      </ports>
+                      <volumes>
+                        <volume>/usr/local/src/saga</volume>
+                      </volumes>
+                      <buildOptions>
+                        <shmsize>2147483648</shmsize>
+                      </buildOptions>
+
+                      <entryPoint>
+                        <!-- exec form for ENTRYPOINT -->
+                        <exec>
+                          <arg>java</arg>
+                          <arg>-jar</arg>  <!--启动参数-->
+                          <arg>/usr/local/src/saga/${project.artifactId}.jar</arg>
+                        </exec>
+                      </entryPoint>
+
+                      <assembly>
+                        <mode>dir</mode>
+                        <basedir>${parent.parent.basedir}/docker-build-config/assembly</basedir>
+                        <descriptor>assembly.xml</descriptor>
+                      </assembly>
+                    </build>
+                    <run>
+                      <namingStrategy>alias</namingStrategy>  <!--container全名规则-->
+                      <ports>
+                        <port>8899:8899</port> <!--端口映射-->
+                        <port>8989:8989</port> <!--端口映射-->
+                      </ports>
+                    </run>
+                  </image>
+                </images>
+              </configuration>
           </plugin>
           <plugin>
             <groupId>org.commonjava.maven.plugins</groupId>
