--- a/docker-build-config/pom.xml
+++ b/docker-build-config/pom.xml
@@ -32,7 +32,7 @@
   <build>
     <pluginManagement>
       <plugins>
-        <plugin>
+        <!--<plugin>
           <groupId>io.fabric8</groupId>
           <artifactId>docker-maven-plugin</artifactId>
           <configuration>
@@ -66,7 +66,7 @@
               </goals>
             </execution>
           </executions>
-        </plugin>
+        </plugin>-->
         <plugin>
           <groupId>org.commonjava.maven.plugins</groupId>
           <artifactId>directory-maven-plugin</artifactId>
@@ -92,7 +92,7 @@
                 <goal>repackage</goal>
               </goals>
               <configuration>
-                <outputDirectory>${project.build.directory}/saga</outputDirectory>
+                <outputDirectory>${project.build.directory}</outputDirectory>
                 <classifier>exec</classifier>
               </configuration>
             </execution>
