--- a/pom.xml
+++ b/pom.xml
@@ -45,27 +45,27 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <kamon.version>0.6.7</kamon.version>
+    <kamon.version>1.1.3</kamon.version>
     <log4j.version>2.6.2</log4j.version>
-    <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
+    <spring.boot.version>2.0.3.RELEASE</spring.boot.version>
     <spring.boot2.version>${spring.boot.version}</spring.boot2.version>
-    <spring.cloud.version>Finchley.RC2</spring.cloud.version>
-    <postgresql.version>42.2.2</postgresql.version>
-    <java.chassis.version>1.0.0-m1</java.chassis.version>
-    <spring.version>5.0.6.RELEASE</spring.version>
-    <akka.version>2.5.6</akka.version>
+    <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
+    <postgresql.version>42.2.4</postgresql.version>
+    <java.chassis.version>1.0.0</java.chassis.version>
+    <spring.version>5.0.7.RELEASE</spring.version>
+    <akka.version>2.5.14</akka.version>
     <rat.version>0.12</rat.version>
     <maven.failsafe.version>2.19.1</maven.failsafe.version>
-    <grpc.version>1.11.0</grpc.version>
-    <kryo.version>4.0.1</kryo.version>
-    <javax.transaction.version>1.2</javax.transaction.version>
-    <eclipse.link.version>2.7.1</eclipse.link.version>
-    <jackson.version>2.9.0</jackson.version>
-    <byteman.version>4.0.1</byteman.version>
+    <grpc.version>	1.14.0</grpc.version>
+    <kryo.version>4.0.2</kryo.version>
+    <javax.transaction.version>1.3</javax.transaction.version>
+    <eclipse.link.version>2.7.2</eclipse.link.version>
+    <jackson.version>2.9.5</jackson.version>
+    <byteman.version>4.0.4</byteman.version>
     <jaxb.version>2.3.0</jaxb.version>
     <javax.activation.version>1.1.1</javax.activation.version>
     <maven-dependency-plugin.version>3.0.2</maven-dependency-plugin.version>
-    <netty.version>2.0.7.Final</netty.version>
+    <netty.version>2.0.12.Final</netty.version>
   </properties>
 
   <name>ServiceComb Saga</name>
